@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.22_01-dev
 
+add Apache::FILENO method for 5.6.0+ tied filehandle support
+thanks to Richard Titmuss for the spot
+
 --disable-rule=EXPAT is passed to Apache's configure to avoid
 XML::Parser conflicts
 
